package bookstore.pojos;

public interface SaleableItem {
    void sellItem();
    double getPrice();
}
